Fixed about page spacing

--- a/css/about.css
+++ b/css/about.css
@@ -70,7 +70,7 @@ nav .menu li a {
     align-items: center;
     color: #ffffff;
     width: 70%;
-    margin: 10rem auto;
+    margin: 6rem auto;
 }
 
 .about .about-text {
@@ -89,7 +89,7 @@ nav .menu li a {
 
     .about .about-text {
         font-size: 1rem;
-        padding: 1rem 0 0 0;
+        padding: 1rem 0 1rem 0;
         border-left: 0;
         border-top: 0;
     }
